# corn-diseases-detection

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .secrets.baseline  COLAB_SETUP.md  Dockerfile  IMPLEMENTACION_COMPLETA.md  Makefile  README.md  README2.md  colab_edge_models_training.ipynb  docker-compose.yml  environment.yml  index.html  pyproject.toml  requirements.txt  test_data_loading.py  verify_setup.py
EDA/: README.md  eda_corn_diseases.py  eda_processed_data.py  eda_report.txt
EDA/eda/: analyze_feature.py  explore_distribution.py  validate_dataset.py  view_samples.py
docs/: README.md
eda/: analyze_feature.py  explore_distribution.py  validate_dataset.py  view_samples.py
eda_processed/: README.md  eda_processed_report.txt
entrenamiento_modelos/: CHANGELOG_COLAB.md  COLAB_SETUP.md  README.md  config.py  diagnostic.py  requirements.txt  setup_and_train.py  train_all_models.py  train_efficientnet.py  train_mobilenetv3.py  train_mobilenetv3_colab.ipynb  train_mobilenetv3_ultimate.ipynb  train_mobilenetv3_ultimate_v2.ipynb  train_mobilenetv3_ultimate_v3.ipynb  train_mobilenetv3_ultimate_v4.ipynb  train_mobilenetv3_ultimate_v5.ipynb  train_mobilenetv6.ipynb  train_mobilevit.py  train_pmvt.py  train_single_model.py  utils.py
experimentation/eda/: analyze_feature.py  explore_distribution.py  view_samples.py
experiments/edge_models/: MLFLOW_TRACKING.md  README.md  __init__.py  compare_models.py  run_all_experiments.sh  select_best_model.py  test_single_model.py  train_all_models.py  train_edge_model.py
mobilenetv3_inference/: README.md  config.yaml  convert_to_tflite.py  inference.py  requirements.txt  run_pipeline.py  validate_model.py
notebooks/: colab_edge_models_training.ipynb  colab_edge_models_training_aggressive-1.ipynb  colab_edge_models_training_aggressive.ipynb
preprocessing/: README.md  preprocess_corn_diseases.py  preprocessing_report.txt
src/: .env  api.py
src/adapters/: data_loader.py
src/api/: __init__.py  main.py
src/builders/: base_models.py  builders.py
src/core/: .env  .env.example  .env_example  config.py  load_env.py  path_finder.py
src/pipelines/: data_pipeline.py  evaluate_finetuned.py  infer.py  preprocess.py  train.py
src/utils/: aug_detectors.py  data_augmentator.py  exceptions.py  image_modifier.py  logger.py  paths.py  utils.py
tests/: __init__.py  conftest.py  test_api.py  test_augmentation.py  test_builders.py  test_config.py  test_data_loader.py  test_infer.py  test_logger.py  test_paths.py  test_preprocess.py  test_train.py
