[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "corn-diseases-detection"
version = "0.1.0"
description = "Deep learning system for corn leaf disease classification using lightweight architectures optimized for edge computing"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

keywords = [
    "deep-learning",
    "computer-vision",
    "transfer-learning",
    "image-classification",
    "agriculture",
    "corn-diseases",
    "tensorflow",
    "keras",
    "google-colab",
    "edge-computing"
]

[project.urls]
Homepage = "https://github.com/ojgonzalezz/corn-diseases-detection"
Repository = "https://github.com/ojgonzalezz/corn-diseases-detection.git"
Issues = "https://github.com/ojgonzalezz/corn-diseases-detection/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "slow: marca tests que tardan mucho tiempo",
    "integration: marca tests de integración",
    "unit: marca tests unitarios",
]
